--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ Temporary Items
 
 presort/SortedIntegralImage
 trainingV/trainingV/SortedIntegralImage
+cascad/cascad/IntegralImage
+cascad/cascad/SortedIntegralImage
