--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ presort/SortedIntegralImage
 trainingV/trainingV/SortedIntegralImage
 cascad/cascad/IntegralImage
 cascad/cascad/SortedIntegralImage
+cascad/cascad/IntegralImage (2)
